Test para ignore 3

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-contacto.html
-noticias.html
-contacto.css
-noticias.css
+/html/contacto.html
+/html/noticias.html
+/css/contacto.css
+/css/noticias.css
